2003-04-25	ujwal

    * Fixed setting of tab position preference 
      in previous commit.
      
    * Fixed some quirks in color scheme selection in IB file.


2003-04-25	fabian
    * Changed the look of preference panel.
    * Added custom ANSI color support. 
      (need to update non english nib files)
      
2003-04-24	ujwal

    * Re-implemented window resizing.

2003-04-23	ujwal

    * Using real bell icon instead of warning sign.

    * Clearing bell on user input.
    
2003-04-21	ujwal
    
    * Set document cursor of scrollview to arrow cursor so that 
      the I-Beam cursor is disabled. Removed all other cursor related 
      code.

2003-04-20	ujwal
    
    * When preferences are read, if the selected font is not 
      found, fall back on the default fixed pit font for the user.
      
    * Increased the width of the encoding combo-box in all nibs.

2003-04-18	ujwal

    * Using named color contants instead of building our own 
      in VT100Terminal.
      
    * Fixed a bug in setting foreground and background colors at 
      the same time.

2003-04-15	ujwal

    * Implemented NSApplication delegate applicationDidUnide: 
      since a user reported problems after an unhide operation.

2003-04-11	fabian
    * Fixed a bug that causes iTerm to hang when illege UTF-8
      characters encountered. We now display a '#' whenever
      encoding translations failed
      
2003-04-11	ujwal

    * Setting cursor color to a mix of foreground and 
      background colors when window is inactive.

2003-04-10	fabian
    * Fixed some bugs in setNeedsDisplayInRect of PTYTextView
    * Removed background attributes when background is default
    * Fixed a email error on website

2003-04-10	ujwal

    * Put back in the code for not auto-scrolling down 
      on new output if the user has scrolled up. It had 
      been interfering with the vttest program. Now we 
      auto-scroll down whan the window size changes, so 
      vttest largely works.
